Split very large XML files into chunks when writing to QTextStream

I could reproduce the crash in Bug 380832 when writing an XML file
aroud 500 MB. Splitting the writing into 100 MB chunks fixed my crash.
I don't know how to pick the best chunk size or how to properly catch
an out of memory (bad_alloc) exception which seems to happen.

I could reproduce the bug in Tellico 2.3.12, so that seems like a bit
different experience than the bug reporter.

Also, as a To DO item, Tellico should switch to using QXmlStreamWriter
instead of QDomDcument::toString() for these big files, especially.

BUG: 380832
FIXED-IN: 3.1